noinst_HEADERS = \
	a_iface.h \
	a_iface_bssap.h \
	bsc_api.h \
	common.h \
	common_cs.h \
	db.h \
	debug.h \
	gsm_04_08.h \
	gsm_04_11.h \
	gsm_04_14.h \
	gsm_04_80.h \
	gsm_data.h \
	gsm_data_shared.h \
	gsm_subscriber.h \
	gsup_client.h \
	iucs.h \
	iucs_ranap.h \
	iu_dummy.h \
	mncc.h \
	mncc_int.h \
	msc_ifaces.h \
	oap_client.h \
	openbscdefines.h \
	a_reset.h \
	osmo_msc.h \
	rrlp.h \
	signal.h \
	silent_call.h \
	smpp.h \
	sms_queue.h \
	transaction.h \
	ussd.h \
	vlr.h \
	vty.h \
	$(NULL)
