noinst_HEADERS = \
	a_iface.h \
	a_iface_bssap.h \
	db.h \
	debug.h \
	gsm_04_08.h \
	gsm_04_11.h \
	gsm_04_11_gsup.h \
	gsm_04_14.h \
	gsm_04_80.h \
	gsm_09_11.h \
	gsm_data.h \
	gsm_data_shared.h \
	gsm_subscriber.h \
	iucs.h \
	iucs_ranap.h \
	iu_dummy.h \
	mncc.h \
	mncc_int.h \
	msc_common.h \
	msc_ifaces.h \
	msc_mgcp.h \
	a_reset.h \
	ran_conn.h \
	rrlp.h \
	signal.h \
	silent_call.h \
	smpp.h \
	sms_queue.h \
	transaction.h \
	vlr.h \
	vty.h \
	$(NULL)
