noinst_HEADERS = \
	call_leg.h \
	cell_id_list.h \
	codec_filter.h \
	codec_mapping.h \
	csd_bs.h \
	csd_filter.h \
	db.h \
	debug.h \
	e_link.h \
	gsm_04_08.h \
	gsm_04_11.h \
	gsm_04_11_gsup.h \
	gsm_04_14.h \
	gsm_04_80.h \
	gsm_09_11.h \
	gsm_data.h \
	gsm_data_shared.h \
	gsm_subscriber.h \
	gsup_client_mux.h \
	mncc.h \
	mncc_call.h \
	mncc_int.h \
	msc_a.h \
	msc_a_remote.h \
	msc_common.h \
	msc_ho.h \
	msc_vgcs.h \
	msc_i.h \
	msc_i_remote.h \
	msc_roles.h \
	msc_t.h \
	msc_t_remote.h \
	msub.h \
	neighbor_ident.h \
	osmux.h \
	paging.h \
	ran_conn.h \
	ran_infra.h \
	ran_msg.h \
	ran_msg_a.h \
	ran_msg_iu.h \
	ran_peer.h \
	rrlp.h \
	rtp_stream.h \
	sccp_ran.h \
	sdp_msg.h \
	sgs_iface.h \
	sgs_server.h \
	sgs_vty.h \
	signal.h \
	silent_call.h \
	sms_queue.h \
	transaction.h \
	transaction_cc.h \
	vlr.h \
	vlr_sgs.h \
	vty.h \
	asci_gcr.h \
	asci_vty.h \
	$(NULL)
